<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.alberthneerans.corpoagrohjc.InformacionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Director"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Atencion"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Aten"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Direccion"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>
